--- a/phone.htm
+++ b/phone.htm
@@ -713,6 +713,10 @@ Motorola XT894</h3>
 <a href="phone/xt894_uart.htm">
 焊接UART</a><br>
 
+&dash;
+<a href="phone/xt894_build_kernel.htm">
+Build Kernel 6.1.80</a><br>
+
 &oplus;
 <b>Android</b><br>
 
