--- a/phone/xt894_alpine_setup.htm
+++ b/phone/xt894_alpine_setup.htm
@@ -49,7 +49,7 @@ $ git -C archives/droid4_bringup/ checkout alpine
 $ wget -c https://github.com/TI-ECS/bt-firmware/raw/master/TIInit_10.6.15.bts -P archives/firmware/ti-connectivity
 $ export droid_rootfs="$PWD/rootfs/alpine/3.11.3_armv7"
 $ mkdir -p ${droid_rootfs}
-$ sudo tar -xzf archives/basic_rootfs/alpine/alpine-minirootfs-3.11.3-armv7.tar.gz -C ${droid_rootfs}/
+$ sudo tar -xzf alpine-minirootfs-3.11.3-armv7.tar.gz -C ${droid_rootfs}/
 $ sudo rsync -a --chown=root:root archives/droid4_bringup/overlay/ ${droid_rootfs}
 $ sudo cp /etc/resolv.conf ${droid_rootfs}/etc/
 $ sudo cp -a /usr/bin/qemu-arm-static ${droid_rootfs}/usr/bin/
