--- a/phone/xt894_ubuntu_setup.htm
+++ b/phone/xt894_ubuntu_setup.htm
@@ -43,12 +43,12 @@ $ sudo fastboot reboot
 $ sudo apt-get install qemu-user-static -y
 
 $ cd
-$ wget -P archives/basic_rootfs/ubuntu-base -c http://cdimage.ubuntu.com/ubuntu-base/releases/18.04.2/release/ubuntu-base-18.04.2-base-armhf.tar.gz
+$ wget http://mirror.uchile.cl/ubuntu-cdimage/ubuntu-base/releases/18.04/release/ubuntu-base-18.04.2-base-armhf.tar.gz
 $ git clone https://github.com/omerlle/droid4-bringup.git archives/droid4_bringup
 $ git -C archives/droid4_bringup/ checkout ubuntu
 $ export droid_rootfs="$PWD/rootfs/ubuntu/18.04.2-base-armhf"
 $ mkdir -p ${droid_rootfs}
-$ sudo tar -xzf archives/basic_rootfs/ubuntu-base/ubuntu-base-18.04.2-base-armhf.tar.gz -C ${droid_rootfs}/
+$ sudo tar -xzf ubuntu-base-18.04.2-base-armhf.tar.gz -C ${droid_rootfs}/
 $ sudo rsync -a --chown=root:root archives/droid4_bringup/overlay/ ${droid_rootfs}
 $ sudo cp /etc/resolv.conf ${droid_rootfs}/etc/
 $ sudo cp -a /usr/bin/qemu-arm-static ${droid_rootfs}/usr/bin/
