--- a/handheld/gb60_teardown.htm
+++ b/handheld/gb60_teardown.htm
@@ -55,7 +55,7 @@ PCB<br>
 背面<br>
 <img src="gb60_teardown/18.jpg" class="maxSize"><br><br>
 
-磨掉型號的IC、QH128AH1G、LM4890S<br>
+磨掉型號的IC(GPCV2159A)、QH128AH1G、LM4890S<br>
 <img src="gb60_teardown/19.jpg" class="maxSize">
 </p>
 
