--- a/index.htm
+++ b/index.htm
@@ -233,45 +233,6 @@ UART傳輸線</a><br>
     安裝系統</a><br>
 
 &oplus;
-<b>SuperZaxxon</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="handheld/pandora_1ghz_superzaxxon_setup.htm">
-    安裝系統</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="handheld/pandora_1ghz_superzaxxon_cht.htm">
-    中文化輸入法</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="handheld/pandora_1ghz_superzaxxon_android.htm">
-    執行Android系統</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="handheld/pandora_1ghz_superzaxxon_ram_speed.htm">
-    調整GPU、RAM速度</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="handheld/pandora_1ghz_superzaxxon_refresh_menu.htm">
-    如何刷新Menu</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="handheld/pandora_1ghz_superzaxxon_bluetooth.htm">
-    如何透過藍牙接收檔案</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="handheld/pandora_1ghz_superzaxxon_screen_setting.htm">
-    如何設定最佳的顯示顏色</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="handheld/pandora_1ghz_superzaxxon_debian.htm">
-    如何同時使用Debian系統</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="handheld/pandora_1ghz_superzaxxon_mount_sd_utf8.htm">
-    如何讓SDCard可以顯示中文檔名</a><br>
-
-&oplus;
 <b>Debian(Mark2)</b><br>
     
     &emsp;&emsp;&emsp;&emsp;&dash;
@@ -332,6 +293,104 @@ UART傳輸線</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_1ghz_mark3_setup.htm">
     安裝系統</a><br>
+
+&oplus;
+<b>SuperZaxxon</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_setup.htm">
+    安裝系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_cht.htm">
+    中文化輸入法</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_android.htm">
+    執行Android系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_ram_speed.htm">
+    調整GPU、RAM速度</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_refresh_menu.htm">
+    如何刷新Menu</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_bluetooth.htm">
+    如何透過藍牙接收檔案</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_screen_setting.htm">
+    如何設定最佳的顯示顏色</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_debian.htm">
+    如何同時使用Debian系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_superzaxxon_mount_sd_utf8.htm">
+    如何讓SDCard可以顯示中文檔名</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>OpenGL ES 2.0</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_setup.htm">
+        開發環境</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_version.htm">
+        Get Version</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_fill.htm">
+        Fill Color</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_triangle.htm">
+        Draw Triangle</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_shader.htm">
+        Use Shader</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_texture.htm">
+        Draw Texture</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_rotate.htm">
+        Rotate Position(Shader)</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_rotate2.htm">
+        Rotate Position(Vertex)</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_scale.htm">
+        Scale Position</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_translate.htm">
+        Translate Position</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_multiple.htm">
+        Draw 2 Triangles</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_multiple2.htm">
+        Draw 2 Textures</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_rgba.htm">
+        Convert ARGB to RGBA(Shader)</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_alpha.htm">
+        Use Global Alpha Setting(Shader)</a><br>
 <br><br><br><br>
 
 <div id="pandora2"></div>
@@ -579,6 +638,42 @@ UART改造</a><br>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/pandora_rebirth_superzaxxon_es2_shader.htm">
         Use Shader</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_texture.htm">
+        Draw Texture</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_rotate.htm">
+        Rotate Position(Shader)</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_rotate2.htm">
+        Rotate Position(Vertex)</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_scale.htm">
+        Scale Position</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_translate.htm">
+        Translate Position</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_multiple.htm">
+        Draw 2 Triangles</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_multiple2.htm">
+        Draw 2 Textures</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_rgba.htm">
+        Convert ARGB to RGBA(Shader)</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_alpha.htm">
+        Use Global Alpha Setting(Shader)</a><br>
 <br><br><br><br>
 
 <div id="pandora3"></div>
@@ -604,7 +699,69 @@ UART改造</a><br>
 
 &dash;
 <a href="handheld/pandora_classic_fix_battery.htm">
-解決電池(Out of Temperature)問題</a>
+解決電池(Out of Temperature)問題</a><br>
+
+&oplus;
+<b>SuperZaxxon</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>OpenGL ES 2.0</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_setup.htm">
+        開發環境</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_version.htm">
+        Get Version</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_fill.htm">
+        Fill Color</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_triangle.htm">
+        Draw Triangle</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_shader.htm">
+        Use Shader</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_texture.htm">
+        Draw Texture</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_rotate.htm">
+        Rotate Position(Shader)</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_rotate2.htm">
+        Rotate Position(Vertex)</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_scale.htm">
+        Scale Position</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_translate.htm">
+        Translate Position</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_multiple.htm">
+        Draw 2 Triangles</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_multiple2.htm">
+        Draw 2 Textures</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_rgba.htm">
+        Convert ARGB to RGBA(Shader)</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_alpha.htm">
+        Use Global Alpha Setting(Shader)</a><br>
 <br><br><br><br>
 
 <div id="pyra"></div>
@@ -1550,11 +1707,11 @@ Build OpenBOR</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_rotate.htm">
-        Rotate Position (Shader)</a><br>
+        Rotate Position(Shader)</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_rotate2.htm">
-        Rotate Position (Vertex)</a><br>
+        Rotate Position(Vertex)</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_scale.htm">
@@ -1574,11 +1731,11 @@ Build OpenBOR</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_rgba.htm">
-        Convert ARGB to RGBA (Shader)</a><br>
+        Convert ARGB to RGBA(Shader)</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/miyoo_a30_cpp_es_alpha.htm">
-        Use Global Alpha Setting (Shader)</a><br>
+        Use Global Alpha Setting(Shader)</a><br>
 <br><br><br><br>
 
 <div id="rg28xx"></div>
