Pandora How to lock shift key.

--- a/index.htm
+++ b/index.htm
@@ -515,6 +515,10 @@ UART改造</a><br>
     如何從SD開機</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_lock_shift.htm">
+    如何Lock Shift</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_rebirth_superzaxxon_runlevel_3.htm">
     如何跑Runlevel 3</a><br>
 
