Pandora Fixed libmpfr.so.6 issue.

--- a/index.htm
+++ b/index.htm
@@ -606,6 +606,10 @@ UART改造</a><br>
     <a href="handheld/pandora_rebirth_superzaxxon_fix_ssh.htm">
     解決no matching host key type found. Their offer: ssh-rsa,ssh-dss問題</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_libmpfr.htm">
+    解決libmpfr.so.1, needed by /usr/local/lib/libmpc.so, may conflict with libmpfr.so.6問題</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Python</b><br>
 
