--- a/phone/pro1x_sfos_lxc.htm
+++ b/phone/pro1x_sfos_lxc.htm
@@ -14,7 +14,7 @@ https://github.com/sailfish-containers/lxc-templates-desktop/wiki/Desktop#start-
 步驟如下：
 </p>
 <pre>
-$ wget https://repo.sailfishos.org/obs/sailfishos:/chum//4.4.0.72_aarch64//aarch64/sailfishos-chum-gui-0.5.0-1.6.1.jolla.aarch64.rpm
+$ wget https://repo.sailfishos.org/obs/sailfishos:/chum/4.4.0.72_aarch64//aarch64/sailfishos-chum-gui-0.5.0-1.6.1.jolla.aarch64.rpm
 $ wget https://repo.sailfishos.org/obs/home:/kabouik/sailfish_latest_aarch64/noarch/lxc-templates-desktop-1.4-1.18.1.jolla.noarch.rpm
 $ wget https://repo.sailfishos.org/obs/home:/kabouik/sailfish_latest_aarch64/aarch64/qxcompositor-0.0.6+qtwayland.5.6.20220828010818.7e0ec8a-1.25.1.jolla.aarch64.rpm
 $ wget https://repo.sailfishos.org/obs/home:/kabouik/sailfish_latest_aarch64/aarch64/harbour-containers-0.8+devel.k.20220830103353.1.g0c0da06-1.99.1.jolla.aarch64.rpm
