--- a/phone.htm
+++ b/phone.htm
@@ -783,6 +783,10 @@ Build Kernel 6.1.80</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/xt894_sfos_fix_cert.htm">
     解決SSL certificate issues</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt894_sfos_fix_wayland.htm">
+    解決undefined symbol: wl_proxy_marshal_flags問題</a><br>
 <br><br><br><br>
 
 <div id="xt897"></div>
