--- a/index.htm
+++ b/index.htm
@@ -591,6 +591,10 @@ UART改造</a><br>
     解決Grep: /lib/libstdc++.la: No such file or directory問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_isl.htm">
+    解決error: isl_space_dim was not declared in this scope問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_rebirth_superzaxxon_fix_libiconv.htm">
     解決GNU libiconv not in use ... iconv.h is from libiconv問題</a><br>
     
