--- a/index.htm
+++ b/index.htm
@@ -583,6 +583,10 @@ UART改造</a><br>
     解決Implicit declaration of function getline問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_static.htm">
+    解決g++: unrecognized option -static-libstdc++問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_rebirth_superzaxxon_fix_gettext.htm">
     解決Making all in po, No rule to make target azNONE問題</a><br>
 
