Pandora Fixed meabi=5 issue.

--- a/index.htm
+++ b/index.htm
@@ -575,6 +575,10 @@ UART改造</a><br>
     解決Undefined reference to __libc_csu_fini問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_meabi.htm">
+    解決as: exec: line 108: -meabi=5: not found問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_rebirth_superzaxxon_fix_ncurses.htm">
     解決tgetent()... configure: error: NOT FOUND問題</a><br>
 
