XT894 Fixed SYS_memfd_create issue.

--- a/phone.htm
+++ b/phone.htm
@@ -785,6 +785,10 @@ Build Kernel 6.1.80</a><br>
     解決SSL certificate issues</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/xt894_sfos_fix_shm.htm">
+    解決errno 38: SYS_memfd_create問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/xt894_sfos_fix_wayland.htm">
     解決undefined symbol: wl_proxy_marshal_flags問題</a><br>
 <br><br><br><br>
