XT894 Added more examples for opengl es 2.0.

--- a/phone.htm
+++ b/phone.htm
@@ -793,7 +793,7 @@ Build Kernel 6.1.80</a><br>
     解決undefined symbol: wl_proxy_marshal_flags問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
-    <b>Wayland Client</b><br>
+    <b>Wayland (Client)</b><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="phone/xt894_sfos_wayland_setup.htm">
@@ -830,6 +830,17 @@ Build Kernel 6.1.80</a><br>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="phone/xt894_sfos_wayland_pingpong.htm">
         Ping Pong</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>Wayland (OpenGL ES 2.0)</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="phone/xt894_sfos_es2_version.htm">
+        Get Version</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="phone/xt894_sfos_es2_fill.htm">
+        Fill Color</a><br>
 <br><br><br><br>
 
 <div id="xt897"></div>
