--- a/phone/xt894_sfos_wayland_listen.htm
+++ b/phone/xt894_sfos_wayland_listen.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - Motorola XT894 - Sailfish OS - Wayland Client - <b>Add Listener</b></h3>
+<h3><a href="../phone.htm">手機</a> - Motorola XT894 - Sailfish OS - Wayland (Client) - <b>Add Listener</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
