--- a/phone/pinephone_sfos_es2_version.htm
+++ b/phone/pinephone_sfos_es2_version.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../phone.htm">手機</a> - Motorola XT894 - Sailfish OS - Wayland (OpenGL ES 2.0) - <b>Get Version</b></h3>
+<h3><a href="../phone.htm">手機</a> - PINE64 PinePhone - Sailfish OS - Wayland (OpenGL ES 2.0) - <b>Get Version</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
@@ -22,8 +22,8 @@ main.c
 #include &lt;EGL/egl.h&gt;
 #include &lt;GLES2/gl2.h&gt;
 
-#define LCD_W   540
-#define LCD_H   960
+#define LCD_W   720
+#define LCD_H   1440
  
 struct wl_shell *shell = NULL;
 struct wl_display *dis = NULL;
@@ -130,7 +130,7 @@ int main(int argc, char **argv)
 <pre>
 $ gcc main.c -o main -lwayland-client -lwayland-egl -lEGL -lGLESv2
 $ ./main
-    egl_diplay = 0x00000001
+    egl_diplay = 0x044a88a0
     egl major:1, minor:4
 </pre>
 
