PinePhone Fixed stuck in boot logo.

--- a/phone.htm
+++ b/phone.htm
@@ -1221,6 +1221,10 @@ Build Tow-boot</a><br>
     安裝系統</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_sfos_upgrade.htm">
+    更新系統</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/pinephone_sfos_lxc.htm">
     安裝LXC</a><br>
 
@@ -1239,6 +1243,10 @@ Build Tow-boot</a><br>
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/pinephone_sfos_fix_home.htm">
     解決無法掛載/home問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_sfos_fix_stuck_boot_logo.htm">
+    解決開機卡在Boot Logo問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/pinephone_sfos_fix_repo.htm">
