PinePhone How to add ldconfig.

--- a/phone.htm
+++ b/phone.htm
@@ -1241,6 +1241,10 @@ Build Tow-boot</a><br>
     如何讓桌面可以橫向顯示</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/pinephone_sfos_ldconfig.htm">
+    如何添加/usr/local/lib</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="phone/pinephone_sfos_fix_home.htm">
     解決無法掛載/home問題</a><br>
 
