D-R35 Added spec, teardown and screen images.

--- a/index.htm
+++ b/index.htm
@@ -176,6 +176,7 @@
     <a href="#x5">              <img src="img/photos/x5.jpg"                class="t0" title="GAME BOX X5"/></a>
     <a href="#v10">             <img src="img/photos/v10.jpg"               class="t0" title="Powkiddy V10"/></a>
     <a href="#gb60">            <img src="img/photos/gb60.jpg"              class="t0" title="GB-60A"/></a>
+    <a href="#d-r35">           <img src="img/photos/d-r35.jpg"             class="t0" title="D-R35"/></a>
 </p>
 </div>
 
@@ -7757,6 +7758,24 @@ GB-60A</h3>
 
 &dash;
 <a href="handheld/gb60_screen.htm">
+可視角</a><br>
+<br><br><br><br>
+
+<div id="d-r35"></div>
+<h3><img src="img/photos/d-r35.jpg" class="floatLeft"/>
+D-R35</h3>
+<hr size="1"><br><br><br><br><br>
+
+&dash;
+<a href="handheld/d-r35_spec.htm">
+簡要規格</a><br>
+
+&dash;
+<a href="handheld/d-r35_teardown.htm">
+拆機</a><br>
+
+&dash;
+<a href="handheld/d-r35_screen.htm">
 可視角</a><br>
 <br><br><br><br>
 </p>
