D-R35 Plus Added more system information.

--- a/handheld/d-r35_spec.htm
+++ b/handheld/d-r35_spec.htm
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../index.htm">掌機</a> - D-R35 - <b>簡要規格</b></h3>
+<h3><a href="../index.htm">掌機</a> - D-R35 Plus - <b>簡要規格</b></h3>
 <hr size="1"><br>
 <table>
     <tr><th>CHIP</th><td>V.R. Technology VT569B</td></tr>
     <tr><th>CPU</th><td>ARM Cortex-A7 800MHz</td></tr>
-    <tr><th>MEMORY</th><td>RAM 128MB</td></tr>
+    <tr><th>MEMORY</th><td>RAM 64MB</td></tr>
     <tr><th>DISPLAY</th><td>3.5" 640x480</td></tr>
     <tr><th>INPUT</th><td>GamePad<br>JoyStick (x2)</tr>
     <tr><th>SLOT</th><td>MicroSD</td></tr>
