--- a/index.htm
+++ b/index.htm
@@ -176,7 +176,7 @@
     <a href="#x5">              <img src="img/photos/x5.jpg"                class="t0" title="GAME BOX X5"/></a>
     <a href="#v10">             <img src="img/photos/v10.jpg"               class="t0" title="Powkiddy V10"/></a>
     <a href="#gb60">            <img src="img/photos/gb60.jpg"              class="t0" title="GB-60A"/></a>
-    <a href="#d-r35">           <img src="img/photos/d-r35.jpg"             class="t0" title="D-R35"/></a>
+    <a href="#d-r35">           <img src="img/photos/d-r35.jpg"             class="t0" title="D-R35 Plus"/></a>
 </p>
 </div>
 
@@ -7763,7 +7763,7 @@ GB-60A</h3>
 
 <div id="d-r35"></div>
 <h3><img src="img/photos/d-r35.jpg" class="floatLeft"/>
-D-R35</h3>
+D-R35 Plus</h3>
 <hr size="1"><br><br><br><br><br>
 
 &dash;
@@ -7777,6 +7777,26 @@ D-R35</h3>
 &dash;
 <a href="handheld/d-r35_screen.htm">
 可視角</a><br>
+
+&dash;
+<a href="handheld/d-r35_dev.htm">
+/dev</a><br>
+
+&dash;
+<a href="handheld/d-r35_proc.htm">
+/proc</a><br>
+
+&dash;
+<a href="handheld/d-r35_kmsg.htm">
+/proc/kmsg</a><br>
+
+&dash;
+<a href="handheld/d-r35_cpuinfo.htm">
+/proc/cpuinfo</a><br>
+
+&dash;
+<a href="handheld/d-r35_meminfo.htm">
+/proc/meminfo</a><br>
 <br><br><br><br>
 </p>
 
