--- a/handheld/d-r35_screen.htm
+++ b/handheld/d-r35_screen.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../index.htm">掌機</a> - D-R35 - <b>可視角</b></h3>
+<h3><a href="../index.htm">掌機</a> - D-R35 Plus - <b>可視角</b></h3>
 <hr size="1"><br>
 <p>
 正面<br>
