--- a/program/wayland_client_es2_version.htm
+++ b/program/wayland_client_es2_version.htm
@@ -16,10 +16,16 @@ main.c
 #include &lt;stdio.h&gt;
 #include &lt;stdlib.h&gt;
 #include &lt;string.h&gt;
+#include &lt;unistd.h&gt;
+
 #include &lt;wayland-egl.h&gt;
 #include &lt;wayland-client.h&gt;
+
 #include &lt;EGL/egl.h&gt;
 #include &lt;GLES2/gl2.h&gt;
+
+#define LCD_W   320
+#define LCD_H   240
 
 struct wl_shell *shell = NULL;
 struct wl_display *dis = NULL;
@@ -29,12 +35,12 @@ struct wl_region *regn = NULL;
 struct wl_compositor *comp = NULL;
 struct wl_egl_window *egl_win = NULL;
 struct wl_shell_surface *shell_surf = NULL;
-
+ 
 EGLConfig egl_conf = 0;
 EGLContext egl_ctx = 0;
 EGLDisplay egl_dis = 0;
 EGLSurface egl_surf = 0;
-
+ 
 EGLint egl_attribs[] = {
     EGL_SURFACE_TYPE, EGL_WINDOW_BIT,
     EGL_RENDERABLE_TYPE, EGL_OPENGL_ES2_BIT,
@@ -43,13 +49,13 @@ EGLint egl_attribs[] = {
     EGL_BLUE_SIZE,  8,
     EGL_NONE
 };
-
+ 
 EGLint ctx_attribs[] = {
     EGL_CONTEXT_CLIENT_VERSION, 
     2, 
     EGL_NONE
 };
-
+ 
 void cb_handle(void *dat, struct wl_registry *reg, uint32_t id, const char *intf, uint32_t ver)
 {
     if (strcmp(intf, "wl_compositor") == 0) {
@@ -59,37 +65,37 @@ void cb_handle(void *dat, struct wl_registry *reg, uint32_t id, const char *intf
         shell = wl_registry_bind(reg, id, &amp;wl_shell_interface, 1);
     }
 }
-
+ 
 void cb_remove(void *dat, struct wl_registry *reg, uint32_t id)
 {
 }
-
+ 
 struct wl_registry_listener cb = {
     .global = cb_handle,
     .global_remove = cb_remove
 };
-
+ 
 int main(int argc, char **argv)
 {
     dis = wl_display_connect(NULL);
     reg = wl_display_get_registry(dis);
-
+ 
     wl_registry_add_listener(reg, &amp;cb, NULL);
     wl_display_dispatch(dis);
     wl_display_roundtrip(dis);
-
+ 
     surf = wl_compositor_create_surface(comp);
     shell_surf = wl_shell_get_shell_surface(shell, surf);
     wl_shell_surface_set_toplevel(shell_surf);
-
+ 
     regn = wl_compositor_create_region(comp);
-    wl_region_add(regn, 0, 0, 1080, 2160);
+    wl_region_add(regn, 0, 0, LCD_W, LCD_H);
     wl_surface_set_opaque_region(surf, regn);
-    egl_win = wl_egl_window_create(surf, 1080, 2160);
-
+    egl_win = wl_egl_window_create(surf, LCD_W, LCD_H);
+ 
     EGLConfig cfg = 0;
     EGLint major = 0, minor = 0, cnt = 0;
-
+ 
     egl_dis = eglGetDisplay((EGLNativeDisplayType)dis);
     eglInitialize(egl_dis, &amp;major, &amp;minor);
     eglGetConfigs(egl_dis, NULL, 0, &amp;cnt);
@@ -99,20 +105,17 @@ int main(int argc, char **argv)
     eglMakeCurrent(egl_dis, egl_surf, egl_surf, egl_ctx);
     printf("egl_diplay = 0x%08x\n", egl_dis);
     printf("egl major:%d, minor:%d\n", major, minor);
-
+ 
     glClearColor(1.0, 0.0, 0.0, 1.0);
     glClear(GL_COLOR_BUFFER_BIT);
     eglSwapBuffers(egl_dis, egl_surf);
-
-    while (1) {
-        wl_display_dispatch(dis);
-    }
-
+    usleep(3000000); 
+ 
     eglTerminate(egl_dis);
     eglDestroySurface(egl_dis, egl_surf);
     eglDestroyContext(egl_dis, egl_ctx);
     wl_egl_window_destroy(egl_win);
-    
+     
     wl_region_destroy(regn);
     wl_shell_surface_destroy(shell_surf);
     wl_shell_destroy(shell);
