--- a/handheld/d-r35_spec.htm
+++ b/handheld/d-r35_spec.htm
@@ -7,7 +7,7 @@
 <table>
     <tr><th>CHIP</th><td>V.R. Technology VT569B</td></tr>
     <tr><th>CPU</th><td>ARM Cortex-A7 800MHz</td></tr>
-    <tr><th>MEMORY</th><td>RAM 64MB</td></tr>
+    <tr><th>MEMORY</th><td>RAM 64MB<br>Flash 8MB</td></tr>
     <tr><th>DISPLAY</th><td>3.5" 640x480</td></tr>
     <tr><th>INPUT</th><td>GamePad<br>JoyStick (x2)</tr>
     <tr><th>SLOT</th><td>MicroSD</td></tr>
