--- a/trip/india_bangalore.htm
+++ b/trip/india_bangalore.htm
@@ -40,10 +40,10 @@ https://www.backpackers.com.tw/forum/showthread.php?t=1301568#post7078137<br><br
 休息6小時大約是5300臺幣，雖然價格有點貴，不過可以好好睡上一覺，這價位還是值得<br>
 <img src="india_bangalore/5.jpg" class="maxSize"><br><br>
 
-邦加羅爾坎皮高達機場(第一航廈)<br>
+邦加羅爾坎皮高達機場(第一航廈)，出海關後，可以使用美金兌換盧比，匯率是100美金兌換6900盧比，根據朋友說法，新加坡機場可以100美金兌換7300盧比<br>
 <img src="india_bangalore/6.jpg" class="maxSize"><br><br>
 
-入住的飯店，在當地算是相當高檔的飯店<br>
+入住的飯店，從機場到飯店的計程車，可以搭乘Uber或者海關旁邊的計程車櫃台，計程車櫃台的價格會比Uber貴上3倍，因此，記得殺價，計程車櫃台喊給司徒的價格是3000盧比，司徒想了一下後，櫃台馬上說2500盧比，哈，不過因為是公司出錢，加上第一次到印度，人生地不不熟，為了安全到飯店，司徒最後還是選擇2500盧比的計程車<br>
 <img src="india_bangalore/7.jpg" class="maxSize"><br>
 <img src="india_bangalore/8.jpg" class="maxSize"><br><br>
 
