--- a/umpc.htm
+++ b/umpc.htm
@@ -25,21 +25,21 @@
     <a href="#d8">              <img src="img/photos/d8.jpg"            class="t0" title="iRiver Dicple D8"/></a>
     <a href="#d88">             <img src="img/photos/d88.jpg"           class="t0" title="iRiver Dicple D88"/></a>
     <a href="#d100">            <img src="img/photos/d100.jpg"          class="t0" title="iRiver Dicple D100"/></a>
-    <a href="#c700">            <img src="img/photos/c700.jpg"          class="t0" title="Zaurus SL-C700"/></a>
-    <a href="#c750">            <img src="img/photos/c750.jpg"          class="t0" title="Zaurus SL-C750"/></a>
-    <a href="#c760">            <img src="img/photos/c760.jpg"          class="t0" title="Zaurus SL-C760"/></a>
-    <a href="#c860">            <img src="img/photos/c860.jpg"          class="t0" title="Zaurus SL-C860"/></a>
-    <a href="#c1000">           <img src="img/photos/c1000.jpg"         class="t0" title="Zaurus SL-C1000"/></a>
-    <a href="#c3000">           <img src="img/photos/c3000.jpg"         class="t0" title="Zaurus SL-C3000"/></a>
-    <a href="#c3100">           <img src="img/photos/c3100.jpg"         class="t0" title="Zaurus SL-C3100"/></a>
-    <a href="#c3200">           <img src="img/photos/c3200.jpg"         class="t0" title="Zaurus SL-C3200"/></a>
-    <a href="#sl6000n">         <img src="img/photos/sl6000n.jpg"       class="t0" title="Zaurus SL-6000N"/></a>
-    <a href="#mi-e1">           <img src="img/photos/mi-e1.jpg"         class="t0" title="Zaurus MI-E1"/></a>
-    <a href="#mi-e21">          <img src="img/photos/mi-e21.jpg"        class="t0" title="Zaurus MI-E21"/></a>
-    <a href="#mi-l1">           <img src="img/photos/mi-l1.jpg"         class="t0" title="Zaurus MI-L1"/></a>
-    <a href="#mi-p10-s">        <img src="img/photos/mi-p10-s.jpg"      class="t0" title="Zaurus MI-P10-S"/></a>
-    <a href="#mi-ex1">          <img src="img/photos/mi-ex1.jpg"        class="t0" title="Zaurus MI-EX1"/></a>
-    <a href="#mi-tr1">          <img src="img/photos/mi-tr1.jpg"        class="t0" title="Zaurus MI-TR1"/></a>
+    <a href="#c700">            <img src="img/photos/c700.jpg"          class="t0" title="SHARP Zaurus SL-C700"/></a>
+    <a href="#c750">            <img src="img/photos/c750.jpg"          class="t0" title="SHARP Zaurus SL-C750"/></a>
+    <a href="#c760">            <img src="img/photos/c760.jpg"          class="t0" title="SHARP Zaurus SL-C760"/></a>
+    <a href="#c860">            <img src="img/photos/c860.jpg"          class="t0" title="SHARP Zaurus SL-C860"/></a>
+    <a href="#c1000">           <img src="img/photos/c1000.jpg"         class="t0" title="SHARP Zaurus SL-C1000"/></a>
+    <a href="#c3000">           <img src="img/photos/c3000.jpg"         class="t0" title="SHARP Zaurus SL-C3000"/></a>
+    <a href="#c3100">           <img src="img/photos/c3100.jpg"         class="t0" title="SHARP Zaurus SL-C3100"/></a>
+    <a href="#c3200">           <img src="img/photos/c3200.jpg"         class="t0" title="SHARP Zaurus SL-C3200"/></a>
+    <a href="#sl6000n">         <img src="img/photos/sl6000n.jpg"       class="t0" title="SHARP Zaurus SL-6000N"/></a>
+    <a href="#mi-e1">           <img src="img/photos/mi-e1.jpg"         class="t0" title="SHARP Zaurus MI-E1"/></a>
+    <a href="#mi-e21">          <img src="img/photos/mi-e21.jpg"        class="t0" title="SHARP Zaurus MI-E21"/></a>
+    <a href="#mi-l1">           <img src="img/photos/mi-l1.jpg"         class="t0" title="SHARP Zaurus MI-L1"/></a>
+    <a href="#mi-p10-s">        <img src="img/photos/mi-p10-s.jpg"      class="t0" title="SHARP Zaurus MI-P10-S"/></a>
+    <a href="#mi-ex1">          <img src="img/photos/mi-ex1.jpg"        class="t0" title="SHARP Zaurus MI-EX1"/></a>
+    <a href="#mi-tr1">          <img src="img/photos/mi-tr1.jpg"        class="t0" title="SHARP Zaurus MI-TR1"/></a>
     <a href="#pw-a8210">        <img src="img/photos/pw-a8210.jpg"      class="t0" title="SHARP Papyrus PW-A8210"/></a>
     <a href="#pw-a8400">        <img src="img/photos/pw-a8400.jpg"      class="t0" title="SHARP Papyrus PW-A8400"/></a>
     <a href="#pw-am700">        <img src="img/photos/pw-am700.jpg"      class="t0" title="SHARP Papyrus PW-AM700"/></a>
@@ -542,23 +542,23 @@ iRiver Dicple D100</h3>
 
 <div id="c700"></div>
 <h3><img src="img/photos/c700.jpg" class="floatLeft"/>
-Zaurus SL-C700</h3>
+SHARP Zaurus SL-C700</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="umpc/c700/review.htm">
-介紹</a><br>
+&dash;
+<a href="umpc/c700_spec.htm">
+簡要規格</a><br>
 
-&lowast;
-<a href="umpc/c700/teardown.htm">
+&dash;
+<a href="umpc/c700_teardown.htm">
 拆機</a><br>
 
-&lowast;
-<a href="umpc/c700/block.htm">
+&dash;
+<a href="umpc/c700_block.htm">
 方塊圖</a><br>
 
-&lowast;
-<a href="umpc/c700/io.htm">
+&dash;
+<a href="umpc/c700_io.htm">
 I/O腳位</a><br>
 
 &lowast;
