Python Fixed bcc issue.

--- a/program.htm
+++ b/program.htm
@@ -2427,6 +2427,10 @@ Python</h3>
 如何讓Unittest只跑幾個特定的檔案</a><br>
 
 &dash;
+<a href="program/python_fix_pythonpath.htm">
+解決cannot import name BPF from bcc問題</a><br>
+
+&dash;
 <a href="program/python_fix_encode.htm">
 解決Strings must be encoded before hashing問題</a><br>
 
