--- a/index.htm
+++ b/index.htm
@@ -620,6 +620,10 @@ UART改造</a><br>
     解決no matching host key type found. Their offer: ssh-rsa,ssh-dss問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_inc.htm">
+    解決features.h:323:26: fatal error: bits/predefs.h: No such file or directory問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_rebirth_superzaxxon_fix_libmpfr.htm">
     解決libmpfr.so.1, needed by /usr/local/lib/libmpc.so, may conflict with libmpfr.so.6問題</a><br>
 
