--- a/phone/xt894_android_skip_setup.htm
+++ b/phone/xt894_android_skip_setup.htm
@@ -8,7 +8,11 @@
 參考資訊：<br>
 https://www.youtube.com/watch?v=Zr84DLKXdwA<br><br>
 
-在安裝畫面亂點幾下，就可以進入桌面
+步驟如下：<br>
+1. 停在Welcome畫面<br>
+2. 收起鍵盤<br>
+3. 橫屏顯示<br>
+4. 點擊四個角落(需要耐心測試)
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
